--- a/src/app/layouts/styles/CmsLayout.module.scss
+++ b/src/app/layouts/styles/CmsLayout.module.scss
@@ -1,3 +1,4 @@
+@import '@/styles/colors';
 .app{
     display: flex;
     flex-direction: row;
@@ -17,7 +18,7 @@
                 &:last-child{border-bottom: 0;}
                 &.linkActive{
                     a{
-                        color: #1f9aff;
+                        color: $text_color_blue;
                     }
                 }
                 a{
@@ -27,7 +28,7 @@
                     letter-spacing: .5px;
                     text-transform: uppercase;
                     font: 12px NunitoSansReg;
-                    color: #ccc;
+                    color: $darkgray;
                 }
             }
         }
@@ -39,7 +40,7 @@
         .header{
             padding: 6px 20px 0;
             width: 100%;
-            background-color: #f9f9f9;
+            background-color: $lightgray;
             box-shadow: 0 2px 4px 0px #cec6c6;
             display: flex;
             flex-direction: row;
@@ -54,7 +55,8 @@
                 .userInfo{
                     strong{
                         margin: 5px 0 0;
-                        border-bottom: 1px solid #a6a6a6;
+                        color: $text_color_dark;
+                        border-bottom: 1px solid $text_color_dark;
                         padding-bottom: 2px;
                         display: block;
                         font-size: 15px;
@@ -81,7 +83,7 @@
                         padding: 3px 5px;
                         font-size: 10px;
                         width: 100%;
-                        color: #8a0000;
+                        color: $red;
                         margin: 2px 0 4px;
                         font-weight: 500;
                         cursor: pointer;
@@ -90,8 +92,7 @@
             }
         }
         .page{
-            padding: 20px;
-            background-color: #fff;
+            background-color: $white;
             flex: 1;
         }
     }
