--- a/utils/styles/Utils.module.scss
+++ b/utils/styles/Utils.module.scss
@@ -1,3 +1,4 @@
+@import '@/styles/colors';
 .breadcrumbs{
     flex: 1;
     margin: 12px 0 0;
@@ -25,7 +26,7 @@
             &.active{
                 a{
                     pointer-events: none;
-                    color: rgba(#0077c0, .6);
+                    color: rgba($text_color_blue, .6);
                     cursor: not-allowed;
                 }
             }
@@ -33,7 +34,7 @@
                 text-transform: uppercase;
                 font-size: 11px;
                 text-decoration: none;
-                color: #0077c0;
+                color: $text_color_blue;
                 padding: 5px;
             }
         }
