--- a/src/app/cms/front/styles/Front.module.scss
+++ b/src/app/cms/front/styles/Front.module.scss
@@ -66,4 +66,14 @@
             display: inline-block;
         }
     }
+
+    .linkForm{
+        width: 400px;
+        margin: 50px auto 0;
+
+        .button.btngreen{
+            width: 100%;
+            border-radius: 10px;
+        }
+    }
 }
