--- a/utils/styles/Utils.module.scss
+++ b/utils/styles/Utils.module.scss
@@ -1,4 +1,5 @@
 @import '@/styles/colors';
+@import '@/styles/forms';
 .breadcrumbs{
     flex: 1;
     margin: 12px 0 0;
@@ -39,4 +40,191 @@
             }
         }
     }
+}
+
+.loader, .loader .bg{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    z-index: 123;
+  }
+  .loader{
+    .bg{
+      background-color: rgba($black, 0.5);
+    }
+    .spinner {
+      display: inline-block;
+      position: absolute;
+      width: 80px;
+      height: 80px;
+      z-index: 123;
+      top: 20%;
+      div {
+        transform-origin: 40px 40px;
+        animation: spinner 1.2s linear infinite;
+        &:after {
+          content: " ";
+          display: block;
+          position: absolute;
+          top: 3px;
+          left: 37px;
+          width: 6px;
+          height: 18px;
+          border-radius: 20%;
+          background: $white;
+        }
+        &:nth-child(1) {
+          transform: rotate(0deg);
+          animation-delay: -1.1s;
+        }
+        &:nth-child(2) {
+          transform: rotate(30deg);
+          animation-delay: -1s;
+        }
+        &:nth-child(3) {
+          transform: rotate(60deg);
+          animation-delay: -0.9s;
+        }
+        &:nth-child(4) {
+          transform: rotate(90deg);
+          animation-delay: -0.8s;
+        }
+        &:nth-child(5) {
+          transform: rotate(120deg);
+          animation-delay: -0.7s;
+        }
+        &:nth-child(6) {
+          transform: rotate(150deg);
+          animation-delay: -0.6s;
+        }
+        &:nth-child(7) {
+          transform: rotate(180deg);
+          animation-delay: -0.5s;
+        }
+        &:nth-child(8) {
+          transform: rotate(210deg);
+          animation-delay: -0.4s;
+        }
+        &:nth-child(9) {
+          transform: rotate(240deg);
+          animation-delay: -0.3s;
+        }
+        &:nth-child(10) {
+          transform: rotate(270deg);
+          animation-delay: -0.2s;
+        }
+        &:nth-child(11) {
+          transform: rotate(300deg);
+          animation-delay: -0.1s;
+        }
+        &:nth-child(12) {
+          transform: rotate(330deg);
+          animation-delay: 0s;
+        }
+      }
+    }
+    @keyframes spinner {
+        0% {
+          opacity: 1;
+        }
+        100% {
+          opacity: 0;
+        }
+    }     
+}
+.popmsg{
+    background-color: $white;
+    box-shadow: 0 0 30px #474747;
+    padding: 40px 30px;
+    border-radius: 10px;
+    width: 420px;
+    z-index: 1234;
+    position: absolute;
+    top: 15%;
+  
+      .popmsgDetails{
+        padding-left: 110px;
+        padding-top: 5px;
+        color: $text_color_dark;
+        text-align: center;
+        h4{
+          font-size: 20px;
+          font-weight: normal;
+          display: inline;
+        }
+        p{
+          font-size: 14px;
+          margin: 0 0 10px;
+        }
+        .button{
+          padding: 6px 30px;
+          width: 100%;
+        }
+      }
+      svg {
+        width: 100px;
+        display: block;
+        float: left;
+      }
+      
+      .path {
+        stroke-dasharray: 1000;
+        stroke-dashoffset: 0;
+        &.circle {
+          -webkit-animation: dash .9s ease-in-out;
+          animation: dash .9s ease-in-out;
+        }
+        &.line {
+          stroke-dashoffset: 1000;
+          -webkit-animation: dash .9s .35s ease-in-out forwards;
+          animation: dash .9s .35s ease-in-out forwards;
+        }
+        &.check {
+          stroke-dashoffset: -100;
+          -webkit-animation: dashCheck .9s .35s ease-in-out forwards;
+          animation: dashCheck .9s .35s ease-in-out forwards;
+        }
+      }
+      @-webkit-keyframes dash {
+        0% {
+          stroke-dashoffset: 1000;
+        }
+        100% {
+          stroke-dashoffset: 0;
+        }
+      }
+      
+      @keyframes dash {
+        0% {
+          stroke-dashoffset: 1000;
+        }
+        100% {
+          stroke-dashoffset: 0;
+        }
+      }
+      
+      @-webkit-keyframes dashCheck {
+        0% {
+          stroke-dashoffset: -100;
+        }
+        100% {
+          stroke-dashoffset: 900;
+        }
+      }
+      
+      @keyframes dashCheck {
+        0% {
+          stroke-dashoffset: -100;
+        }
+        100% {
+          stroke-dashoffset: 900;
+        }
+      }
 }
