--- a/src/app/cms/front/styles/Front.module.scss
+++ b/src/app/cms/front/styles/Front.module.scss
@@ -41,8 +41,13 @@
 .innerpage{
     float: left;
     width: 100%;
-    padding: 15px;
-
+    padding: 20px 15px;
+    .formTitle{
+        margin: 0 0 10px;
+        font: 25px NunitoSansReg;
+        color: $text_color_dark;
+        float: left;
+    }
     .button.btnblue{
         float: right;
         border-radius: 5px;
@@ -68,19 +73,19 @@
         }
     }
     .pageForm{
-        width: 80%;
-        margin: 40px auto 0;
+        // width: 80%;
+        margin: 0 0 0 10px;
         display: flex;
         flex-direction: column;
         .button.btngreen{
-            width: 400px;
+            width: 100%;
             margin: 0 auto;
             border-radius: 10px;
         }
     }
     .linkForm{
         width: 400px;
-        margin: 50px auto 0;
+        margin: 0 auto;
         .button.btngreen{
             width: 100%;
             border-radius: 10px;
