--- a/src/app/layouts/styles/WebLayout.module.scss
+++ b/src/app/layouts/styles/WebLayout.module.scss
@@ -1,67 +1,162 @@
 @import '@/styles/colors';
+@import '@/styles/forms';
+@import '@/styles/helpers';
+.header{
+  padding: 0 0 0 20px;
+  display: flex;
+  flex-direction: row;
+  box-shadow: 0 2px 4px 0px #cec6c6;
+}
 .navbar{
-    background-color: #333647;
-    padding: 0 20px;
-    &.sticky{
-      position: fixed;
-      width: 100%;
-      top: 0;
-      z-index: 1;
-    }
-    ul{
-      display: flex;
-      li{
-        list-style: none;
-        &.linkActive, &.linkActive.hasChildren{
-          a{
-            color: $yellow;
-            // background-color: $white;
-          }
+  // background-color: #333647;
+  background-color: transparent;
+  // padding: 0 20px;
+  margin: 18px 20px 15px;
+  flex: 1;
+  &.sticky{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1;
+  }
+  ul{
+    display: flex;
+    li{
+      list-style: none;
+      &.linkActive, &.linkActive.hasChildren{
+        a{
+          // color: $yellow;
+          color: #14b11c;
+          // background-color: $white;
         }
-        .link {
+      }
+      .link {
+        float: left;
+        font-size: 16px;
+        // color: $white;
+        color: #0077c0;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        text-transform: uppercase;
+        font: 14px NunitoSansBold;
+      }
+      &.hasChildren{
+        float: left;
+        .dropbtn{
           float: left;
+        }
+      }
+      .dropdown{
+        &:hover .dropdownContent {
+          display: block;
+        }
+        .dropbtn {
           font-size: 16px;
-          color: $white;
-          text-align: center;
+          // color: $white;
+          color: #0077c0;
           padding: 14px 16px;
           text-decoration: none;
+          text-transform: uppercase;
+          font: 14px NunitoSansBold;
+          margin: 0;
         }
-        &.hasChildren{
-          float: left;
-          .dropbtn{
-            float: left;
-          }
-        }
-        .dropdown{
-          &:hover .dropdownContent {
-            display: block;
-          }
-          .dropbtn {
-            font-size: 16px;
-            color: $white;
-            padding: 14px 16px;
+        .dropdownContent{
+          display: none;
+          position: absolute;
+          background-color: $white;
+          min-width: 300px;
+          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+          z-index: 1;
+          margin-top: 52px;
+          a{
+            float: none;
+            color: $black;
+            padding: 12px 16px;
             text-decoration: none;
-            font-family: inherit;
-            margin: 0;
-          }
-          .dropdownContent{
-            display: none;
-            position: absolute;
-            background-color: $white;
-            min-width: 300px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-            z-index: 1;
-            margin-top: 50px;
-            a{
-              float: none;
-              color: $black;
-              padding: 12px 16px;
-              text-decoration: none;
-              display: block;
-              text-align: left;
-            }
+            display: block;
+            text-align: left;
           }
         }
       }
     }
   }
+}
+.layer1{
+  min-height: 450px;
+}
+.layer2{
+  min-height: 300px;
+  padding: 40px 40px 60px;
+  text-align: center;
+  background-color: #e9e9e9;
+  h1{
+    color: #14b11c;
+    font: 35px NunitoSansBold;
+    margin: 0 0 10px;
+  }
+  .service{
+    padding: 15px 20px;
+    margin: 15px;
+    background-color: #f9f9f9;
+    border: 1px solid #14b11c;
+    border-radius: 10px;
+    min-height: 200px;
+    position: relative;
+    overflow: hidden;
+    text-align: left;
+
+    .icon{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 50px;
+      height: 50px;
+      border-bottom-right-radius: 10px;
+    }
+
+    h3{
+      color: #000;
+      font: 20px NunitoSansReg;
+      margin-left: 40px;
+    }
+  }
+}
+.footer{
+  background-color: #031d42;
+  padding: 25px 20px;
+  // min-height: 300px;
+  display: flex;
+  flex-direction: row;
+  color: $white;
+  img{
+    margin-right: 50px;
+  }
+  .footer_links{
+    flex: 1;
+    padding: 25px 20px;
+
+    ul{
+      margin: 10px 0 0 -5px;
+      padding: 0;
+      li{
+        list-style: none;
+        a{
+          color: #fff;
+          text-decoration: none;
+          padding: 5px 10px;
+          width: 100%;
+          display: inline-block;
+          font: 15px NunitoSansReg;
+        }
+      }
+    }
+  }
+}
+.footerBtm{
+  background-color: #06142b;
+  color: $white;
+  text-align: center;
+  padding: 8px 0;
+  font: 12px NunitoSansReg;
+}
