--- a/utils/styles/Utils.module.scss
+++ b/utils/styles/Utils.module.scss
@@ -27,7 +27,7 @@
             &.active{
                 a{
                     pointer-events: none;
-                    color: rgba($text_color_blue, .6);
+                    color: rgba(82, 82, 82, .6);
                     cursor: not-allowed;
                 }
             }
