--- a/src/app/cms/front/styles/Front.module.scss
+++ b/src/app/cms/front/styles/Front.module.scss
@@ -16,7 +16,7 @@
             display: inline;
             &.linkActive{
                 a{
-                    background-color: $white;
+                    background-color: $lightgray;
                     color: $text_color_blue;
                     border: 1px solid $darkgray;
                     border-bottom: 0;
@@ -41,45 +41,61 @@
 .innerpage{
     float: left;
     width: 100%;
-    padding: 20px 15px;
-    .formTitle{
-        margin: 0 0 10px;
-        font: 25px NunitoSansReg;
-        color: $text_color_dark;
+    padding: 0;
+    .innerpage_head{
+        padding: 20px;
+        margin: 0;
+        background-color: $lightgray;
+        width: 100%;
         float: left;
-    }
-    .button.btnblue{
-        float: right;
-        border-radius: 5px;
-        padding: 2px 15px 3px 5px;
-        letter-spacing: 0.5px;
-        img{
+        border-bottom: 1px solid #ccc;
+        box-shadow: 0 2px 4px 0px #eaeaea;
+        .formTitle{
+            margin: 0;
+            font: 25px NunitoSansReg;
+            color: $text_color_dark;
             float: left;
-            margin-right: 5px;
-            &.edit_icon{
-                width: 30px;
-                height: 28px;
-            }
-            &.plus_icon{
-                width: 14px;
-                height: auto;
-                margin: 8px 8px 6px 6px;
-            }
         }
-        span{
-            font: 13px NunitoSansBold;
-            margin: 7px 0 0;
-            display: inline-block;
+        .button.btnblue{
+            float: right;
+            border-radius: 5px;
+            padding: 2px 15px 3px 5px;
+            letter-spacing: 0.5px;
+            img{
+                float: left;
+                margin-right: 5px;
+                &.edit_icon{
+                    width: 30px;
+                    height: 28px;
+                }
+                &.plus_icon{
+                    width: 14px;
+                    height: auto;
+                    margin: 8px 8px 6px 6px;
+                }
+            }
+            span{
+                font: 13px NunitoSansBold;
+                margin: 7px 0 0;
+                display: inline-block;
+            }
         }
     }
+    .previewer{
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+    }
+    
     .pageForm{
-        // width: 80%;
-        margin: 0 0 0 10px;
+        width: 80%;
+        margin: 120px auto 50px;
         display: flex;
         flex-direction: column;
+        clear: both;
         .button.btngreen{
-            width: 100%;
-            margin: 0 auto;
+            width: 40%;
+            margin: 20px auto 0;
             border-radius: 10px;
         }
     }
