--- a/src/app/cms/front/styles/Front.module.scss
+++ b/src/app/cms/front/styles/Front.module.scss
@@ -101,7 +101,7 @@
     }
     .linkForm{
         width: 400px;
-        margin: 0 auto;
+        margin: 120px auto 50px;
         .button.btngreen{
             width: 100%;
             border-radius: 10px;
