--- a/src/app/cms/images/styles/Images.module.scss
+++ b/src/app/cms/images/styles/Images.module.scss
@@ -83,6 +83,82 @@
 .imageForm{
     margin: 20px;
     float: left;
+    .checkbox{
+        float: none;
+        margin: 0;
+        display: inline-block;
+        left: 2px;
+        &.disabled{
+            pointer-events: none;
+            .checkmark{
+                border-color: $darkgray;
+            }
+        }
+        .checkmark{
+            border-color: $blue;
+        }
+    }
+    .checkbox{
+        position: relative;
+        width: 18px;
+        height: 18px;
+        top: 3px;
+        float: left;
+        margin: 0 5px 15px;
+        cursor: pointer;
+        .lbl{
+            position: absolute;
+            left: 25px;
+            font: 15px NunitoSansBold;
+            color: $blue;
+            width: max-content;
+        }
+        input{
+            position: absolute;
+            opacity: 0;
+            cursor: pointer;
+            height: 0;
+            width: 0;
+            &:checked ~ .checkmark:after {
+                display: block;
+            }
+        }
+        input:checked + .checkmark{
+            background-color: $blue;
+        }
+        .checkmark{
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            border: 1px solid $blue;
+            &:after {
+                content: "";
+                position: absolute;
+                display: none;
+            }
+            &:after {
+                left: 5px;
+                top: 0px;
+                width: 7px;
+                height: 12px;
+                border: solid $white;;
+                border-width: 0 3px 3px 0;
+                -webkit-transform: rotate(45deg);
+                -ms-transform: rotate(45deg);
+                transform: rotate(45deg);
+            }
+        }
+        &:hover{
+            .checkmark{
+                background-color: $blue;
+            }
+        }
+        &:checked ~ .checkmark {
+            background-color: $blue;
+        }
+    }
     .imageContainer{
         border: 1px solid $darkgray;
         background-color: $gray;
